# diploma-thesis

./: .gitignore  README.md  archive.md  docker-compose.dev.yml  docker-compose.yml  notes.md  plan.md  platform.md  pyproject.toml  ruff.toml  thesis.yaml  todo.md
artifacts/: base-catboost.joblib  base-mlp.joblib  closure-lightgbm.joblib  closure-xgboost.joblib  eta-xgboost.json  rain-mlp.joblib  rain-xgboost.joblib  results.json
artifacts/baseline/: base-catboost.joblib  base-closure-catboost.joblib  base-lightgbm.joblib  base-linear-regression.joblib  base-rain-catboost.joblib  base-xgboost.joblib  closure-catboost.joblib  rain-catboost.joblib  rain-lightgbm.joblib  rain-multi-layer-perceptron.joblib  results.json
artifacts/models/: closure-catboost.joblib  closure-linear-regression.joblib  rain-catboost.joblib
code/: average-speed-lstm.ipynb  base.py  eta-dnn-distance-embeddings.ipynb  eta-dnn-distance.ipynb  eta-dnn-subtrips-distance-embeddings.ipynb  eta-dnn-subtrips.ipynb  eta-dnn.ipynb  eta-xgboost.ipynb  final_lstm_average_speed.ipynb  lstm-average_speed.ipynb
data/: generation.py  osm.sumocfg  output_fcd.csv  visualization.py
data/athens-10h/: closure.add.xml  osm.netccfg  vtypes.xml
dataset/: README.md  config.py  dataset-creation.ipynb  dataset-eda.ipynb  dataset-preparation.ipynb  dataset.ipynb  dataset.md  fixed-routes.rou.xml  fixedRoutes.rou.xml  generation.py  logger.py  main.py  osm_test.sumocfg  osm_train.sumocfg  preprocessing.py  test-routes.rou.xml  test.sumocfg  train-routes.rou.xml  train.sumocfg  visualization.py  vtypes.xml
dataset/athens-10h/: closure-test.sumocfg  closure-train.sumocfg  closure.add.xml  fixed.flows.xml  fixed.rou.xml  rain-test.sumocfg  rain-train.sumocfg  rain.add.xml  test.sumocfg  train.sumocfg
dataset/athens-osmWebWizard/: closure.add.xml  closures.add.xml  drift-fixed.flows.xml  drift-fixed.rou.xml  drift-test.sumocfg  drift-train.sumocfg  fixed-routes.rou.xml  fixed.flows.xml  fixed.rou.xml  osm-copy.sumocfg  osm.polycfg  osm.sumocfg  test.sumocfg  train.sumocfg  vtypes.xml
dataset/osmWebWizard/: build.bat  osm.netccfg  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg  osm_pt.rou.xml  osm_ptlines.xml  osm_stops.add.xml  stopinfos.xml  trips.trips.xml  trips.trips.xml.errorlog  vehroutes.xml
docs/: dataset.md  entipo_anathesis_diplomatikis_tsanakas.docx  eta.md  platform.md
experiments/: add_all_features.py  add_cluster_features.py  add_fourier_features.py  add_pca_features.py  add_temporal_features.py  all_features.py  all_features_optimized.py  analysis.py  baseline.py  baseline_drift.py  baseline_research.py  baseline_retrain.py  baseline_stable.py  before_tuning.py  box_cox_transform_target.py  boxcox_transform_target.py  catboost_tuning.py  catboost_tuning_focused.py  cell_features.py  center_distance_features.py  clustering_features.py  comparison.py  coordinate_features.py  cross_validation.py  distance_features.py  drift.py  drift_calibration.py  eta-dnn-distance-embeddings.ipynb  eta-dnn-distance.ipynb  evaluation.py  experiments.ipynb  feature_engineering.py  features_all.py  features_cell.py  features_cluster.py  features_fourier.py  features_pca.py  features_selection.py  features_selection_correlation.py  features_selection_gain.py  (+44 more)
models/: closure-mlp.joblib  rain-linear-regression.joblib
new-map/: osm.polycfg  osm.sumocfg
new-simulation/: base-test.sumocfg  base-train.sumocfg  osm.netccfg  rain-test.sumocfg  rain-train.sumocfg
platform/state/: drift_status.json
presentation/: main.tex  presentation.tex
presentation/midterm/: main.tex
report/: main.tex  references.bib  thesis.sty
report/backmatter/: 01_appendix.tex  01_bibliography.tex  02_bibliography.tex
report/frontmatter/: 01_titlepage.tex  02_committee_english.tex  03_copyright.tex  04_abstract_greek.tex  05_abstract.tex  05_abstract_english.tex  06_acknowledgements.tex  07_table_of_contents.tex  08_extended_abstract_greek.tex
report/mainmatter/: 01_introduction.tex  02_background.tex  03_methodology.tex  03_relevant_work.tex  04_dataset_generation_and_machine_learning_research.tex  04_implementation.tex  05_evaluation.tex  05_platform_architecture_and_implementation.tex  06_conclusion.tex  06_results.tex  07_conclusion.tex
resources/: thesis_drift_v1.docx  thesis_plan.pptx
scripts/: analysis.py  analysis_without_baselines.py  baseline.py  drift.py  research.py  results.py  retrain.py  simulation.py  stable.py  tuning.py
shared/state/: simulation.json
simulation/: base-test.sumocfg  base-train.sumocfg  closure-test.sumocfg  closure-train.sumocfg  closure.add.xml  osm.netccfg  osm.polycfg  rain-test.sumocfg  rain-train.sumocfg  rain.add.xml  rain.sumocfg  simulation.py  test.sumocfg  train.sumocfg  vtypes.xml
src/: base.py  baseline.py  eta-dnn-distance.ipynb  eta-dnn-subtrips-distance-embeddings.ipynb  eta-dnn.ipynb  eta-xgboost.ipynb
src/common/: logger.py
src/dataset/: README.md  config.py  generation.py  main.py  preprocessing.py  visualization.py
thesis/: __init__.py  config.py  logger.py
thesis/backend/: Dockerfile  __init__.py  main.py  (+3 more)
wip/: online_drift_detection_stops.py
(+367 files in other folders)
