[project]
name = "thesis"
version = "0.1.0"
authors = [
    { name = "George Kyriakopoulos", email = "imgeorgekyr@gmail.com" }
]
requires-python = ">=3.12.11,<3.13.0"
dependencies = [
    "ipykernel==6.30.1",
    "matplotlib==3.10.1",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = "thesis"

[project.optional-dependencies]
backend = [
    "fastapi==0.116.1",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "numpy==2.2.3",
    "orjson==3.11.3",
    "pandas==2.2.3",
    "pydantic==2.11.7",
    "thesis[eta]",
    "uvicorn==0.35.0",
    "uvloop==0.21.0; sys_platform != 'win32'",
]

eta = [
    "catboost==1.2.8",
    "joblib==1.5.1",
    "lightgbm==4.6.0",
    "matplotlib==3.10.1",
    "numpy==2.2.3",
    "optuna==4.4.0",
    "pandas==2.2.3",
    "requests==2.32.4",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "shap==0.48.0",
    "thesis[simulation]",
    "tqdm==4.67.1",
    "xgboost==2.1.4",
]

frontend = [
    "dash-bootstrap-components==2.0.4",
    "dash-bootstrap-templates==2.1.0",
    "dash-leaflet==1.1.3",
    "dash==3.2.0",
    "httpx==0.28.1",
    "plotly==6.2.0",
    "pydantic==2.11.7",
]

predictor = [
    "fastapi==0.116.1",
    "httptools==0.7.1",
    "joblib==1.5.1",
    "numpy==2.2.3",
    "orjson==3.11.3",
    "pandas==2.2.3",
    "pydantic==2.11.7",
    "thesis[eta]",
    "uvicorn==0.35.0",
    "uvloop==0.21.0; sys_platform != 'win32'",
]

simulation = [
    "eclipse-sumo==1.24.0",
    "numpy==2.2.3",
    "pyarrow==21.0.0",
    "pyproj==3.7.2",
    "rtree==1.4.1",
    "sumolib==1.24.0",
    "traci==1.24.0",
]

drift = [
    "fastapi==0.116.1",
    "httptools==0.7.1",
    "numpy==2.2.3",
    "orjson==3.11.3",
    "pydantic==2.11.7",
    "river==0.22.0",
    "scikit-learn==1.6.1",
    "uvicorn==0.35.0",
    "uvloop==0.21.0; sys_platform != 'win32'",
]
