[project]
name = "thesis"
version = "0.1.0"
authors = [
    { name = "George Kyriakopoulos", email = "imgeorgekyr@gmail.com" }
]
requires-python = ">=3.12.11,<3.13.0"
dependencies = [
    "ipykernel==6.30.1",
    "matplotlib==3.10.1",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = "thesis"

[project.optional-dependencies]

api = [
    "fastapi==0.116.1",
    "httptools==0.7.1",
    "orjson==3.11.3",
    "pydantic==2.11.7",
    "uvicorn==0.35.0",
    "uvloop==0.21.0; sys_platform != 'win32'",
]

backend = [
    "httpx==0.28.1",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "thesis[api]",
]

drift = [
    "numpy==2.2.3",
    "river==0.22.0",
    "thesis[api]",
]

eta = [
    "requests==2.32.4",
    "thesis[research]",
    "thesis[sumo]",
    "tqdm==4.67.1",
]

frontend = [
    "dash-bootstrap-components==2.0.4",
    "dash-bootstrap-templates==2.1.0",
    "dash-leaflet==1.1.3",
    "dash==3.2.0",
    "httpx==0.28.1",
    "markdown==3.7",
    "plotly==6.2.0",
    "pydantic==2.11.7",
    "reportlab==4.2.5",
]

predictor = [
    "thesis[api]",
    "thesis[research]",
    "thesis[sumo]",
]

research = [
    "catboost==1.2.8",
    "joblib==1.5.1",
    "lightgbm==4.6.0",
    "matplotlib==3.10.1",
    "numpy==2.2.3",
    "optuna==4.4.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "shap==0.48.0",
    "xgboost==2.1.4",
]

simulation = [
    "eclipse-sumo==1.24.0",
    "numpy==2.2.3",
    "thesis[sumo]"
]

summarizer = [
    "openai==1.59.5",
    "thesis[api]",
]

sumo = [
    "pyarrow==21.0.0",
    "pyproj==3.7.2",
    "rtree==1.4.1",
    "sumolib==1.24.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
